--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -68,7 +68,8 @@
     </Link>
     <PostBuildEvent>
       <Command>copy "$(SolutionDir)deps\bin\glfw3.dll" "$(OutputPath)"
-copy "$(SolutionDir)deps\bin\glew32.dll" "$(OutputPath)"</Command>
+copy "$(SolutionDir)deps\bin\glew32.dll" "$(OutputPath)"
+copy "$(OutputPath)..\Abstract\Abstract.dll" "$(OutputPath)Abstract.dll"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
