--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -3,4 +3,15 @@
   <ItemGroup>
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="res\shaders\basic.frag" />
+    <None Include="res\shaders\basic.vert" />
+    <None Include="res\shaders\def-ambient.frag" />
+    <None Include="res\shaders\def-directional.frag" />
+    <None Include="res\shaders\def-gbuf.frag" />
+    <None Include="res\shaders\def-gbuf.vert" />
+    <None Include="res\shaders\def-point.frag" />
+    <None Include="res\shaders\def-spot.frag" />
+    <None Include="res\shaders\filter-common.vert" />
+  </ItemGroup>
 </Project>
